welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:4: error: ';' expected but 'return' found.
	}return false
         ^